--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -58,10 +58,18 @@
 .recently-used-title,
 .recent-files-title {
   margin-top: 25px;
-  margin-bottom: 23px;
+
   font-size: 20px;
   font-weight: 400;
   color: var(--main-blue-color);
+}
+
+.recently-used-title {
+  margin-bottom: 23px;
+}
+
+.recent-files-title {
+  margin-bottom: 14px;
 }
 
 .recently-used-cards-container {
@@ -79,6 +87,10 @@
   border-radius: 12px;
   background-color: white;
   box-shadow: 0px 4px 16px 0px #3a3a3a12;
+}
+
+.recently-used-card > .card-text {
+  gap: 9px;
 }
 
 .square-with-shadow {
@@ -145,7 +157,7 @@
 
 .card-text > p {
   font-size: 8px;
-  font-weight: 400;
+  font-weight: 300;
   line-height: 9px;
   color: var(--font-color);
 }
