--- a/src/assets/styles/sidebar-right.css
+++ b/src/assets/styles/sidebar-right.css
@@ -91,7 +91,7 @@
 .white-circle > p:nth-child(2) {
   color: var(--font-color);
   font-size: 14px;
-  font-weight: 400;
+  font-weight: 300;
   line-height: 16px;
 }
 .white-circle > p:nth-child(1) span {
